<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="Safety" Id="{4995b679-938e-42b5-9dcc-376f00032510}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// PLC Outputs sent to TwinSAFE Controller
	bErrorAck AT %Q* : BOOL;
	bSafetyRun AT %Q* : BOOL;
	bSafetyRestart AT %Q* : BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>